products.html relative path change

--- a/products.html
+++ b/products.html
@@ -28,32 +28,32 @@
       <h1>Our Products</h1>
       <div class="product-grid">
         <div class="product-card">
-          <img src="../assets/images/barcode-labels.jpeg" alt="Barcode Labels">
+          <img src="assets/images/barcode-labels.jpeg" alt="Barcode Labels">
           <h3>Barcode Labels</h3>
           <p>High-quality barcode labels for various types of products. Durable and easy to use.</p>
         </div>
         <div class="product-card">
-          <img src="../assets/images/barcode-scanner.jpeg" alt="Barcode Scanner">
+          <img src="assets/images/barcode-scanner.jpeg" alt="Barcode Scanner">
           <h3>Barcode Scanner</h3>
           <p>Efficient and reliable barcode scanners for smooth inventory management.</p>
         </div>
         <div class="product-card">
-          <img src="../assets/images/barcode-printer.jpeg" alt="Barcode Printer">
+          <img src="assets/images/barcode-printer.jpeg" alt="Barcode Printer">
           <h3>Barcode Printer</h3>
           <p>Durable barcode printers for high-volume label printing and consistent performance.</p>
         </div>
         <div class="product-card">
-          <img src="../assets/images/product-label.jpeg" alt="Product Label">
+          <img src="assets/images/product-label.jpeg" alt="Product Label">
           <h3>Product Label</h3>
           <p>Premium product labels for easy identification and branding.</p>
         </div>
         <div class="product-card">
-          <img src="../assets/images/resin-ribbon.jpeg" alt="Resin Ribbon">
+          <img src="assets/images/resin-ribbon.jpeg" alt="Resin Ribbon">
           <h3>Resin Ribbon</h3>
           <p>High-quality resin ribbons for long-lasting prints on labels.</p>
         </div>
         <div class="product-card">
-          <img src="../assets/images/wax-ribbon.jpeg" alt="Wax Ribbon">
+          <img src="assets/images/wax-ribbon.jpeg" alt="Wax Ribbon">
           <h3>Wax Ribbon</h3>
           <p>Affordable wax ribbons for cost-effective labeling solutions.</p>
         </div>
