--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PSP Barcode Galleria LLP</title>
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">-->
 </head>
 <body>
     <div class="page-container">
         <!-- Navbar -->
         <header>
-            <div class="navbar">
-              <div class="logo">PSP Barcode Galleria LLP</div>
-              <nav class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="products.html">Products</a>
-                <a href="contact.html">Contact</a>
-              </nav>
-            </div>
-          </header>
+          <div class="navbar">
+            <div class="logo">PSP Barcode Galleria LLP</div>
+            <button class="menu-toggle" id="menu-toggle">☰</button>
+            <nav class="nav-links" id="nav-links">
+              <a href="index.html">Home</a>
+              <a href="about.html">About</a>
+              <a href="products.html">Products</a>
+              <a href="contact.html">Contact</a>
+            </nav>
+          </div>
+        </header>
 
         <!-- Hero Section -->
         <section class="hero">
@@ -41,6 +42,15 @@
 
         <script src="assets/js/script.js"></script>
     </div>
-  
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const menuToggle = document.getElementById("menu-toggle");
+        const navLinks = document.getElementById("nav-links");
+    
+        menuToggle.addEventListener("click", () => {
+          navLinks.classList.toggle("open");
+        });
+      });
+    </script>
 </body>
 </html>
