--- a/products.html
+++ b/products.html
@@ -14,7 +14,8 @@
     <header>
       <div class="navbar">
         <div class="logo">PSP Barcode Galleria LLP</div>
-        <nav class="nav-links">
+        <button class="menu-toggle" id="menu-toggle">☰</button>
+        <nav class="nav-links" id="nav-links">
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
           <a href="products.html">Products</a>
@@ -66,5 +67,15 @@
     </footer>
 
   </div>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const menuToggle = document.getElementById("menu-toggle");
+      const navLinks = document.getElementById("nav-links");
+  
+      menuToggle.addEventListener("click", () => {
+        navLinks.classList.toggle("open");
+      });
+    });
+  </script>
 </body>
 </html>
