contact details updated

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
   <main class="contact-container">
     <section class="contact-info">
       <h2>Contact Information</h2>
-      <p><span class="icon">📞</span> +91-9876543210</p>
-      <p><span class="icon">✉️</span> contact@pspbarcodegalleria.com</p>
+      <p><span class="icon">📞</span> +91-9311576934</p>
+      <p><span class="icon">✉️</span> contact@pspbarcode.in</p>
     </section>
 
     <section class="contact-form">
