--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     <section class="map">
       <h2>Our Location</h2>
       <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14006.677392408358!2d77.2167218!3d28.6448008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd1a98a4f2ef%3A0x3b21ec1a76c6482b!2sConnaught%20Place%2C%20New%20Delhi%2C%20Delhi%20110001!5e0!3m2!1sen!2sin!4v1611305671456!5m2!1sen!2sin" 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.608629448235!2d77.06638372601506!3d28.581512786394903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1b17441a9ce7%3A0xa88d604e74ec7070!2sManzil%20Apartment%2C%20Sector%209%2C%20Pocket%202%2C%20Dwarka%20Sector%209%2C%20Dwarka%2C%20Delhi%2C%20110077!5e0!3m2!1sen!2sin!4v1745216709793!5m2!1sen!2sin" 
         width="100%" 
         height="300" 
         style="border:0; border-radius: 12px;" 
