--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Products - PSP Barcode Galleria LLP</title>
+  <link rel="icon" type="image/x-icon" href="assets/Icon/LogoBW.ico">
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/products.css" />
 </head>
@@ -11,18 +12,7 @@
   <div class="page-container">
 
     <!-- Navbar -->
-    <header>
-      <div class="navbar">
-        <div class="logo">PSP Barcode Galleria LLP</div>
-        <button class="menu-toggle" id="menu-toggle">☰</button>
-        <nav class="nav-links" id="nav-links">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="products.html">Products</a>
-          <a href="contact.html">Contact</a>
-        </nav>
-      </div>
-    </header>
+    <header id="navbar-container"></header>
 
     <!-- Product Section -->
     <section class="product-section">
@@ -68,14 +58,22 @@
 
   </div>
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const menuToggle = document.getElementById("menu-toggle");
-      const navLinks = document.getElementById("nav-links");
+    // Inject the navbar
+    fetch("navbar.html")
+      .then(response => response.text())
+      .then(data => {
+        document.getElementById("navbar-container").innerHTML = data;
   
-      menuToggle.addEventListener("click", () => {
-        navLinks.classList.toggle("open");
+        // 🚨 Now the navbar is in the DOM — attach the event listener
+        const menuToggle = document.getElementById("menu-toggle");
+        const navLinks = document.getElementById("nav-links");
+  
+        if (menuToggle && navLinks) {
+          menuToggle.addEventListener("click", () => {
+            navLinks.classList.toggle("open");
+          });
+        }
       });
-    });
   </script>
 </body>
 </html>
