updated contact info in form

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
     <section class="contact-form">
       <h2>Send us a message</h2>
-      <form action="mailto:tananshahuja17@gmail.com" method="POST" enctype="text/plain">
+      <form action="mailto:contact@pspbarcode.in" method="POST" enctype="text/plain">
         <input type="text" placeholder="Your Name" required />
         <input type="email" placeholder="Your Email" required />
         <textarea placeholder="Your Message" required></textarea>
